# dark-wisps-defence

./: .gitattributes  .gitignore  Cargo.toml  README.md
assets/: data.yaml
assets/shaders/: emissions_map.wgsl  energy_supply_map.wgsl  grid_display.wgsl  ripple.wgsl  towers_ranges_map.wgsl  wisp.wgsl
assets/shaders/wisps/: electric.wgsl  light.wgsl  water.wgsl
documentation/: persistence.md
lib-core/: Cargo.toml
lib-core/migrations/: V1__initial.sql
lib-core/src/: buildings.rs  camera.rs  common.rs  grids.rs  lib.rs  load_save.rs  modifiers.rs  mouse.rs  states.rs  utils.rs
lib-core/src/load_save/: common.rs  load.rs  save.rs
lib-core/src/persistence/: common.rs  load.rs  mod.rs
lib-derive/: Cargo.toml
lib-derive/src/: lib.rs
lib-grid/: Cargo.toml
lib-grid/src/: lib.rs
lib-grid/src/grids/: base.rs  common.rs  emissions.rs  energy_supply.rs  mod.rs  obstacles.rs  tower_ranges.rs  towers_range.rs  visited.rs  wisps.rs
lib-grid/src/search/: common.rs  flooding.rs  mod.rs  pathfinding.rs  targetfinding.rs
lib-inventory/: Cargo.toml
lib-inventory/src/: almanach.rs  lib.rs  modifiers.rs  resources.rs  stats.rs
lib-ui/: Cargo.toml
lib-ui/src/: cost_indicator.rs  healthbar.rs  lib.rs  upgrade_line.rs  utils.rs
maps/: empty_map.dwd  empty_map.yaml  test_map.dwd  test_map.yaml  test_map_backup.yaml
src/: camera.rs  common.rs  common_components.rs  common_systems.rs  data_loader.rs  grid.rs  main.rs  map_editor.rs  map_loader.rs  mouse.rs  objectives.rs  pathfinding.rs  prelude.rs
src/buildings/: common.rs  common_components.rs  common_systems.rs  components.rs  energy_relay.rs  exploration_center.rs  info_panel.rs  main_base.rs  mining_complex.rs  mod.rs  tower_blaster.rs  tower_cannon.rs  tower_emitter.rs  tower_rocket_launcher.rs
src/editor/: mod.rs  objectives.rs  summonings.rs
src/effects/: common.rs  explosions.rs  mod.rs  ripple.rs  wisp_attack.rs
src/grids/: base.rs  base_grid.rs  common.rs  emissions.rs  energy_supply.rs  mod.rs  obstacles.rs  visited.rs  wisps.rs
src/inventory/: almanach.rs  mod.rs  objectives.rs  resources.rs  stats.rs
src/map_objects/: common.rs  dark_ore.rs  mod.rs  quantum_field.rs  walls.rs
src/overlays/: emissions.rs  energy_supply.rs  mod.rs  towers_range.rs
src/projectiles/: cannonball.rs  components.rs  laser_dart.rs  mod.rs  rocket.rs
src/search/: common.rs  flooding.rs  mod.rs  pathfinding.rs  targetfinding.rs
src/ui/: badges.rs  common.rs  construction_menu.rs  display_building_info.rs  display_info_panel.rs  grid_display.rs  grid_object_placer.rs  indicators.rs  interaction_state.rs  main_menu.rs  mod.rs  objectives_panel.rs  pause_indicator.rs
src/units/: expedition_drone.rs  mod.rs
src/utils/: id.rs  math.rs  mod.rs
src/wisps/: components.rs  materials.rs  mod.rs  spawning.rs  summoning.rs  systems.rs
