[package]
name = "dark-wisps-defence"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
nanorand = "0.7.0"
serde = "1.0.192"
serde_yaml = "0.9.27"

[profile.release]
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
