[package]
name = "dark-wisps-defence"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.*", features = ["dynamic_linking"] }
bytemuck = { version = "1.23.*", features = ["derive"] }
nanorand = "0.7.0"
refinery = { version = "0.9.*", features = ["rusqlite"]}
rusqlite = { version = "0.37.*", features = ["bundled"] }
serde = "1.0.*"
serde_yaml = "0.9.*"

[dependencies.lib-core]
path = "lib-core"

[dependencies.lib-grid]
path = "lib-grid"

[dependencies.lib-inventory]
path = "lib-inventory"

[dependencies.lib-ui]
path = "lib-ui"

[workspace]
members = [
  "lib-core",
  "lib-grid",
  "lib-inventory",
  "lib-ui",
]

[profile.release]
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
