[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.*", features = ["dynamic_linking"] }
refinery = { version = "0.9.*", features = ["rusqlite"]}
rusqlite = { version = "0.37.*", features = ["bundled"] }
serde = "1.0.*"

[dependencies.lib-derive]
path = "../lib-derive"

