[package]
name = "lib-inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.*", features = ["dynamic_linking"] }
serde = "1.0.*"
strum = { version = "0.27.*", features = ["derive"] }

[dependencies.lib-core]
path = "../lib-core"

[dependencies.lib-derive]
path = "../lib-derive"